[gd_scene load_steps=103 format=2]

[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_20.png" type="Texture" id=1]
[ext_resource path="res://Movement.tscn" type="PackedScene" id=2]
[ext_resource path="res://GroundedEnemy.gd" type="Script" id=3]
[ext_resource path="res://SimpleHealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://ObstacleDetector.gd" type="Script" id=5]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_08.png" type="Texture" id=6]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_00.png" type="Texture" id=7]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_01.png" type="Texture" id=8]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_16.png" type="Texture" id=9]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_07.png" type="Texture" id=10]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_11.png" type="Texture" id=11]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_04.png" type="Texture" id=12]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_05.png" type="Texture" id=13]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_09.png" type="Texture" id=14]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_06.png" type="Texture" id=15]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_12.png" type="Texture" id=16]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_13.png" type="Texture" id=17]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_15.png" type="Texture" id=18]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_03.png" type="Texture" id=19]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_02.png" type="Texture" id=20]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_17.png" type="Texture" id=21]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_14.png" type="Texture" id=22]
[ext_resource path="res://Animation/Walker/Walk/Armature_WalkCycle_10.png" type="Texture" id=23]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_06.png" type="Texture" id=24]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_13.png" type="Texture" id=25]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_16.png" type="Texture" id=26]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_07.png" type="Texture" id=27]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_17.png" type="Texture" id=28]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_11.png" type="Texture" id=29]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_18.png" type="Texture" id=30]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_03.png" type="Texture" id=31]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_04.png" type="Texture" id=32]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_12.png" type="Texture" id=33]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_14.png" type="Texture" id=34]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_15.png" type="Texture" id=35]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_01.png" type="Texture" id=36]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_09.png" type="Texture" id=37]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_08.png" type="Texture" id=38]
[ext_resource path="res://Animation/Walker/DuckenEnde/Armature_DuckenEnde_2.png" type="Texture" id=39]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_00.png" type="Texture" id=40]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_11.png" type="Texture" id=41]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_19.png" type="Texture" id=42]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_00.png" type="Texture" id=43]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_04.png" type="Texture" id=44]
[ext_resource path="res://Animation/Walker/DuckenEnde/Armature_DuckenEnde_3.png" type="Texture" id=45]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_10.png" type="Texture" id=46]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_01.png" type="Texture" id=47]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_08.png" type="Texture" id=48]
[ext_resource path="res://Animation/Walker/DuckenEnde/Armature_DuckenEnde_0.png" type="Texture" id=49]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_10.png" type="Texture" id=50]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_06.png" type="Texture" id=51]
[ext_resource path="res://Animation/Walker/DuckenEnde/Armature_DuckenEnde_7.png" type="Texture" id=52]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_02.png" type="Texture" id=53]
[ext_resource path="res://Animation/Walker/DuckenEnde/Armature_DuckenEnde_8.png" type="Texture" id=54]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_05.png" type="Texture" id=55]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_05.png" type="Texture" id=56]
[ext_resource path="res://Animation/Walker/DuckenEnde/Armature_DuckenEnde_6.png" type="Texture" id=57]
[ext_resource path="res://Animation/Walker/DuckenEnde/Armature_DuckenEnde_4.png" type="Texture" id=58]
[ext_resource path="res://Animation/Walker/DuckenEnde/Armature_DuckenEnde_5.png" type="Texture" id=59]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_02.png" type="Texture" id=60]
[ext_resource path="res://Animation/Walker/DuckenEnde/Armature_DuckenEnde_1.png" type="Texture" id=61]
[ext_resource path="res://Animation/Walker/DuckenEnde/Armature_DuckenEnde_9.png" type="Texture" id=62]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_07.png" type="Texture" id=63]
[ext_resource path="res://Animation/NEWANIMATIONS/Walker/AttackFixDirection/Armature_AttackDifferentDirection_09.png" type="Texture" id=64]
[ext_resource path="res://Animation/Walker/Ducken/Armature_Ducken_03.png" type="Texture" id=65]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_16.png" type="Texture" id=66]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_13.png" type="Texture" id=67]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_15.png" type="Texture" id=68]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_20.png" type="Texture" id=69]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_21.png" type="Texture" id=70]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_17.png" type="Texture" id=71]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_18.png" type="Texture" id=72]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_23.png" type="Texture" id=73]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_22.png" type="Texture" id=74]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_24.png" type="Texture" id=75]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_14.png" type="Texture" id=76]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_19.png" type="Texture" id=77]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_06.png" type="Texture" id=78]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_05.png" type="Texture" id=79]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_09.png" type="Texture" id=80]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_00.png" type="Texture" id=81]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_03.png" type="Texture" id=82]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_01.png" type="Texture" id=83]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_04.png" type="Texture" id=84]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_08.png" type="Texture" id=85]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_07.png" type="Texture" id=86]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_10.png" type="Texture" id=87]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_11.png" type="Texture" id=88]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_02.png" type="Texture" id=89]
[ext_resource path="res://Animation/Walker/Death/Armature_Death2_12.png" type="Texture" id=90]
[ext_resource path="res://EnemyScenes/EnemyExplosive.tscn" type="PackedScene" id=91]
[ext_resource path="res://SFX/Enemies/Turret_Death2.wav" type="AudioStream" id=92]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 43 ), ExtResource( 47 ), ExtResource( 53 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 55 ), ExtResource( 24 ), ExtResource( 27 ), ExtResource( 48 ), ExtResource( 64 ), ExtResource( 50 ), ExtResource( 29 ), ExtResource( 33 ), ExtResource( 25 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 26 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 42 ), ExtResource( 1 ) ],
"loop": true,
"name": "Attack",
"speed": 24.0
}, {
"frames": [ ExtResource( 81 ), ExtResource( 83 ), ExtResource( 89 ), ExtResource( 82 ), ExtResource( 84 ), ExtResource( 79 ), ExtResource( 78 ), ExtResource( 86 ), ExtResource( 85 ), ExtResource( 80 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 90 ), ExtResource( 67 ), ExtResource( 76 ), ExtResource( 68 ), ExtResource( 66 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 77 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 74 ), ExtResource( 73 ), ExtResource( 75 ) ],
"loop": true,
"name": "Death",
"speed": 24.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 36 ), ExtResource( 60 ), ExtResource( 65 ), ExtResource( 44 ), ExtResource( 56 ), ExtResource( 51 ), ExtResource( 63 ), ExtResource( 38 ), ExtResource( 37 ), ExtResource( 46 ), ExtResource( 41 ) ],
"loop": true,
"name": "Ducken",
"speed": 24.0
}, {
"frames": [ ExtResource( 49 ), ExtResource( 61 ), ExtResource( 39 ), ExtResource( 45 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 57 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 62 ) ],
"loop": true,
"name": "DuckenEnde",
"speed": 24.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 10 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 22 ), ExtResource( 18 ), ExtResource( 9 ), ExtResource( 21 ) ],
"loop": true,
"name": "Walk",
"speed": 24.0
} ]

[sub_resource type="RectangleShape2D" id=29]
extents = Vector2( 25, 66 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 26, 67.5 )

[sub_resource type="Animation" id=41]
resource_name = "Attack"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 20, -8 ) ]
}

[sub_resource type="Animation" id=40]
resource_name = "Death"
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28, 0.32, 0.36, 0.4, 0.44, 0.48, 0.52, 0.56, 0.6, 0.64, 0.68, 0.72, 0.76, 0.8, 0.84, 0.88, 0.92, 0.96, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 24 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_process"
} ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ false ],
"method": "set_physics_process"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:collision_layer")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:collision_mask")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("AudioStreamPlayer2D")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("HurtBox:collision_layer")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("HurtBox:collision_mask")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtBox:collision_layer")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HurtBox:collision_mask")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimatedSprite:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Walk" ]
}
tracks/6/type = "value"
tracks/6/path = NodePath(".:collision_layer")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath(".:collision_mask")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("HealthBar:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AnimatedSprite:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("AnimatedSprite:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/11/type = "value"
tracks/11/path = NodePath(".:rotation_degrees")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("AnimatedSprite:offset")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "take_damage"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HealthBar:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 8.5, 62.3516 )

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 25, 4.5 )

[sub_resource type="RectangleShape2D" id=39]
extents = Vector2( 27, 1.5 )

[node name="GroundedEnemy" type="KinematicBody2D" groups=["Animated", "Destructible", "Enemy", "Processing", "Pushable"]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )
touch_damage = 5
current_health = 20
max_health = 20
move_on_ground_only = false
enable_knockback = true

[node name="Movement" parent="." instance=ExtResource( 2 )]
gravity_force = 35.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 11, -10 )
frames = SubResource( 1 )
animation = "Walk"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 8, -9 )
shape = SubResource( 29 )

[node name="HurtBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2( 9, -9.5 )
shape = SubResource( 30 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 41 )
anims/Death = SubResource( 40 )
anims/RESET = SubResource( 5 )
anims/take_damage = SubResource( 4 )

[node name="ObstacleDetector" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="ObstacleDetection" type="Area2D" parent="ObstacleDetector"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleDetector/ObstacleDetection"]
position = Vector2( 45, -11.2969 )
shape = SubResource( 31 )

[node name="ObstacleDetectionBack" type="Area2D" parent="ObstacleDetector"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleDetector/ObstacleDetectionBack"]
position = Vector2( -29, -8.64842 )
shape = SubResource( 31 )

[node name="GapDetection" type="Area2D" parent="ObstacleDetector"]
position = Vector2( 3, -1 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObstacleDetector/GapDetection"]
position = Vector2( 56, 64 )
shape = SubResource( 32 )

[node name="RegainGroundTimer" type="Timer" parent="ObstacleDetector"]
wait_time = 0.05

[node name="FeetArea" type="Area2D" parent="."]
visible = false
position = Vector2( 8, 54 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeetArea"]
position = Vector2( 0, 3.5 )
shape = SubResource( 39 )

[node name="HealthBar" parent="." instance=ExtResource( 4 )]
visible = false
margin_left = -30.0
margin_top = -99.0
margin_right = 126.0
margin_bottom = -73.0

[node name="Explosive" parent="." instance=ExtResource( 91 )]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 92 )
bus = "SFX"

[connection signal="body_entered" from="HurtBox" to="." method="_on_HurtBox_body_entered"]
[connection signal="body_exited" from="HurtBox" to="." method="_on_HurtBox_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="gap_detected" from="ObstacleDetector" to="." method="_on_ObstacleDetector_gap_detected"]
[connection signal="obstacle_hit" from="ObstacleDetector" to="." method="_on_ObstacleDetector_obstacle_hit"]
[connection signal="body_entered" from="ObstacleDetector/ObstacleDetection" to="ObstacleDetector" method="_on_ObstacleDetection_body_entered"]
[connection signal="body_entered" from="ObstacleDetector/ObstacleDetectionBack" to="ObstacleDetector" method="_on_ObstacleDetection_body_entered"]
[connection signal="body_exited" from="ObstacleDetector/GapDetection" to="ObstacleDetector" method="_on_GapDetection_body_exited"]
[connection signal="timeout" from="ObstacleDetector/RegainGroundTimer" to="ObstacleDetector" method="_on_RegainGroundTimer_timeout"]
[connection signal="body_entered" from="FeetArea" to="." method="_on_FeetArea_body_entered"]
[connection signal="body_exited" from="FeetArea" to="." method="_on_FeetArea_body_exited"]
